--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,3 +1,20 @@
-<h1>
-    Init Django
-</h1>
+
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css/foundation.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+</head>
+<body>
+    <h1 class="title">
+        <a class=" button warning" href="#">Init Django</a>
+    </h1 >
+</body>
+</html>
+
