feat: add list department

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -16,7 +16,7 @@
           </ul>
         </li>-->
         <li> <a href="{% url 'persona_app:all-employe' %}">Listar</a></li>
-        <li> <a href="#">Departamentos </a></li>
+        <li> <a href="{% url 'department_app:all-department' %}">Departamentos </a></li>
         <li><a href="#0">Administrar</a></li</li>
 
       </ul>
