--- a/templates/departamento/list_all.html
+++ b/templates/departamento/list_all.html
@@ -13,7 +13,7 @@ Departamentos
 <div class="grid-container">
     <div class="grid-x grid-margin-x">  <!-- main row -->
         <div class="cell">
-            <h2>{{titulo}}</h2>
+            <h3>{{titulo}}</h3>
         </div>
 
         <form class="cell grid-x grid-margin-x" method="GET" action="" id="formSearch" name="formSearch">
@@ -64,7 +64,9 @@ Departamentos
                                 <td>
                                     <div class="grid-x grid-margin-x">
                                         <div class="cell large-4">
-                                            <a class="button success" href="{% url 'persona_app:detail-employe' item.id %}">Ver</a>
+                                            <a class="button success" href="{% url 'persona_app:all-employee-by-area' item.short_name %}">
+                                                Ver
+                                            </a>
                                         </div>
                                         <div class="cell large-4">
                                             <a class="button primary" href="#">Editar</a>
