feat: add list of employees to manage

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -17,7 +17,7 @@
         </li>-->
         <li> <a href="{% url 'persona_app:all-employe' %}">Listar</a></li>
         <li> <a href="{% url 'department_app:all-department' %}">Departamentos </a></li>
-        <li><a href="#0">Administrar</a></li</li>
+        <li><a href="{% url 'persona_app:empleados-admin' %}">Administrar</a></li</li>
 
       </ul>
     </div>
