--- a/templates/persona/lista_empleados.html
+++ b/templates/persona/lista_empleados.html
@@ -1,24 +1,21 @@
 {% extends 'includes/base.html' %}
 
+{% block title %}
+    Administrar empleados
+{% endblock title %}
+
 {% block content %}
+
 {% include 'includes/header.html' %}
+
 
 <div class="grid-container"> 
     <div class="grid-x">
         <div class="cell">
+            <br>
             <h2> Todos los empleados</h2>
+            <br>
         </div>
-        <form class="cell grid-x grid-margin-x" method="GET" action="" id="formSearch" name="formSearch">
-            {% csrf_token %}
-            <div class="cell large-7">
-                <input type="text" class="" name="termino" id="termino" placeholder="Ingrese el termino" >
-            </div>
-            <div class="cell large-2">
-                <button type="submit" class="button success" title="buscar empleado">
-                    Buscar
-                </button >
-            </div>
-        </form>
 
         <div class="cell">
             <!--table -->
@@ -36,19 +33,24 @@
                   </tr>
                 </thead>
                 <tbody>
-                    <!-- listaEmpleado o object_list -->
-                    {% for item in listaEmpleado %}
+                    <!-- listaDeDatos o object_list -->
+                    {% for item in object_list %}
                     <tr>
                         <td> {{item.id}}</td>
                         <td>{{item.first_name}}</td>
                         <td>{{item.last_name}}</td>
-                        <td>{{item.full_name}}</td>
+                        <td>
+                            {{item.full_name}}                            
+                        </td>
                         <td>{{item.job}}</td>
                         <td>{{item.departamento}}</td>
                         <td>
                             <div class="grid-x grid-margin-x">
                                 <div class="cell auto">
-                                    <a class="button success" href="{% url 'persona_app:detail-employe' item.id %}">Ver</a>
+                                    <a class="button primary" href="{% url 'persona_app:update-employe' item.id  %}">Editar</a>
+                                </div>
+                                <div class="cell auto">
+                                    <a class="button alert" href="{% url 'persona_app:delete-employe' item.id %}">Eliminar</a>
                                 </div>
                             </div>
                         </td>
@@ -96,7 +98,6 @@
 
     </div>
 </div>
-
 
 
 {% endblock content %}
