--- a/templates/persona/update_employee.html
+++ b/templates/persona/update_employee.html
@@ -19,7 +19,7 @@
                 <!-- 'form' es una varible que se creo internamnete para trabajar con nuestro UpdateView.
                 Definira un formulario para trabajar con los campos definidos en el 'fields' de la vista. 
                 csrf_token proporciona seguridad al formulario -->
-                <class class="grid-x grid-margin-x" method="POST" action="" name="formUpdateEmployee">
+                <form class="grid-x grid-margin-x" method="POST" action="" name="formUpdateEmployee">
                     {% csrf_token %}
                     <!-- {{ form.as_p}} -->
                     <div class="cell medium-6 large-6">
@@ -33,13 +33,7 @@
                         </label>
                     </div>
 
-                    <div class="cell medium-6 large-6">
-                        <label> Full name
-                            {{form.full_name}}
-                        </label>
-                    </div>
-
-                    <div class="cell medium-6 large-6">
+                    <div class="cell large">
                         <label> Job
                             {{form.job}}
                         </label>
