refactor feat: add call to employee registration form

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -24,7 +24,9 @@
     <div class="top-bar-right">
       <ul class="menu">
         <!--<li><input type="search" placeholder="Search"></li>-->
-        <li><button type="button" class="button">Registrar nuevo</button></li>
+        <li>
+          <a class="button" href="{% url 'persona_app:add-employee' %}">Registrar nuevo</a>
+        </li>
       </ul>
     </div>
   </div>
