--- a/templates/persona/add_employee.html
+++ b/templates/persona/add_employee.html
@@ -1,12 +1,60 @@
-<h2>{{title}}</h2>
-<!-- 'form' es una varible que se creo internamnete para trabajar con nuestro CreateView.
- Definira un formulario para trabajar con los campos definidos en el 'fields' de la vista. 
-csrf_token proporciona seguridad al formulario -->
+{% extends 'includes/base.html' %}
 
-<style></style>
-<form method="POST" name="formAddEmployee"> 
-{% csrf_token %}
-{{ form.as_p}}
+{% block title %}
+    Registrar empleado
+{% endblock %}
 
-<button type="submit"> Registrar </button>
-</form> 
+{% block content %}
+    {% include 'includes/header.html' %}
+
+    <div class="grid-container">
+        <div class="grid-x grid-margin-x">
+            <h2 class="cell">{{title}}</h2>
+            <!-- 'form' es una varible que se creo internamnete para trabajar con nuestro CreateView.
+            Definira un formulario para trabajar con los campos definidos en el 'fields' de la vista. 
+            csrf_token proporciona seguridad al formulario -->
+
+            <div class="cell">
+                <form class="grid-x grid-margin-x" method="POST" name="formAddEmployee"> 
+                    {% csrf_token %}
+                    <!--{{ form.as_p}} -->
+                    <div class="cell medium-6 large-6">
+                        <label>Name
+                          {{ form.first_name }}
+                        </label>
+                    </div>
+                    <div class="cell medium-6 large-6">
+                        <label>Last name
+                          {{ form.last_name }}
+                        </label>
+                    </div>
+                    <div class="cell large">
+                        <label> Job
+                            {{form.job}}
+                        </label>
+                    </div>
+
+                    <div class="cell">
+                        <label> Department
+                            {{form.departamento}}
+                        </label>
+                    </div>
+
+                    <div class="cell">
+                        <label> Skills 
+                            {{form.habilidades}}
+                        </label>
+                    </div>
+
+                    <div class="cell">
+                        <button type="submit"  class="button success large"> Registrar </button>
+                    </div>
+                    
+                </form> 
+            </div> <!-- End cell form -->
+
+        </div> <!-- End grid -->
+    </div>
+
+{% endblock content %}
+
