--- a/templates/persona/detail_empleado.html
+++ b/templates/persona/detail_empleado.html
@@ -1,4 +1,8 @@
+
+
 {% extends 'includes/base.html' %}
+
+{% load static %}
 
 {% block content %}
 
@@ -25,26 +29,53 @@
 <br>
 
 <div class="grid-container">
-    <div class="callout success">
+  <div class="grid-x grid-margin-x align-center">
+      <div class="cell large-6 card" style="width: 500px;">
+
+        <div class="card-divider">
+          <!-- si un campo  es de tipo 'choices' puedes acceder a su valor mediante get_nombrecampo_display -->
+          {{empleado.get_job_display }}
+        </div>
+        
+        {% if empleado.avatar %}
+          <img src="{{ empleado.avatar.url }}">
+        {% else %}
+          <img src="{% static 'img/vue.png' %}">  
+        {% endif %}
+          
+        <div class="card-section">
+          <h4>{{ empleado.full_name }}</h4>
+
+          <!-- description employee -->
+          <div class="callout success">
   
-        <h5 style="text-align: center;">{{title}}</h5>
-    
-      <div class="">
-        <p class="title">Nombre</p>
-    <p> {{empleado.first_name}} </p> 
-    
-    <p class="title">Apellido</p>
-    <p>{{object.last_name}}</p>
-    
-    <p class="title">Departamento</p>
-    <p> {{object.departamento}}</p> 
-    
-    <p class="title">Habilidades</p>
-    <p> {{object.habilidades}}</p>
-    
-    </div>
-      <a class="button success large expanded" style="text-align: center;" href="{% url 'persona_app:all-employe' %}">Empleados</a>
-    </div>
+            <h5 style="text-align: center;">{{title}}</h5>
+        
+          <div class="">
+            <p class="title">Nombre</p>
+        <p> {{empleado.first_name}} </p> 
+        
+        <p class="title">Apellido</p>
+        <p>{{object.last_name}}</p>
+        
+        <p class="title">Departamento</p>
+        <p> {{object.departamento}}</p> 
+        
+        <p class="title">Habilidades</p>
+
+        <p> {{empleado.habilidades}}</p>
+        
+        </div>
+          <a class="button success large expanded" style="text-align: center;" href="{% url 'persona_app:all-employe' %}">Empleados</a>
+        </div>
+        <!-- End description employee -->
+
+
+
+        </div> <!--End section card-->
+      </div> <!-- End card -->
+  </div> <!-- End grid-->
+
         
 </div>
 {% endblock content %}
